syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

message NpcTalkReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 572;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 entity_id = 8;
    uint32 npc_entity_id = 9;
    uint32 talk_id = 7;
}

message NpcTalkRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 598;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 cur_talk_id = 9;
    uint32 npc_entity_id = 6;
    int32 retcode = 3;
    uint32 entity_id = 13;
}

message GetSceneNpcPositionReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 535;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint32 npc_id_list = 6;
    uint32 scene_id = 8;
}

message GetSceneNpcPositionRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 507;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 10;
    repeated NpcPositionInfo npc_info_list = 14;
    uint32 scene_id = 4;
}

message MetNpcIdListNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 521;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 npc_first_met_id_list = 9;
}

message MeetNpcReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 503;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 npc_id = 4;
}

message MeetNpcRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 590;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 14;
    uint32 npc_first_met_id = 8;
}

message FinishedTalkIdListNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 573;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 finished_talk_id_list = 1;
}
